--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Snazzy stylus workflow with webpack",
   "main": "index.js",
   "keywords": [
-    "stylus", "webpack", "css"
+    "stylus",
+    "webpack",
+    "css"
   ],
   "dependencies": {
     "autoprefixer-stylus": "^0.7.0",
     "css-loader": "0.19.0",
+    "debug": "^2.2.0",
     "style-loader": "0.12.3",
     "stylus-loader": "1.3.1"
   },
