--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer-stylus": "^0.7.0",
     "css-loader": "0.19.0",
     "debug": "^2.2.0",
+    "es6-promise": "^3.0.2",
     "style-loader": "0.12.3",
     "stylus-loader": "1.3.1"
   },
