--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "css"
   ],
   "dependencies": {
-    "autoprefixer-stylus": "^0.7.0",
-    "css-loader": "0.19.0",
-    "debug": "^2.2.0",
-    "es6-promise": "^3.0.2",
-    "style-loader": "0.12.3",
-    "stylus-loader": "1.3.1"
+    "autoprefixer-stylus": "0.9.2",
+    "css-loader": "0.23.1",
+    "debug": "2.2.0",
+    "es6-promise": "3.0.2",
+    "style-loader": "0.13.1",
+    "stylus-loader": "2.0.0"
+  },
+  "peerDependencies": {
+    "stylus": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
