--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   ],
   "dependencies": {
     "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "debug": "2.2.0",
     "style-loader": "0.13.1",
-    "stylus-loader": "2.4.0"
+    "stylus-loader": "2.4.0",
+    "webpack": "2.2.0-rc.0"
   },
   "peerDependencies": {
     "stylus": "*"
