--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "style-loader": "0.13.1",
     "stylus-loader": "2.4.0",
-    "webpack": "2.2.0-rc.0"
+    "webpack": "2.2.1"
   },
   "peerDependencies": {
     "stylus": "*"
