--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "css"
   ],
   "dependencies": {
-    "css-loader": "0.26.1",
-    "debug": "2.2.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "style-loader": "0.13.1",
-    "stylus-loader": "2.4.0",
-    "webpack": "2.2.1"
-  },
-  "peerDependencies": {
-    "stylus": "*"
+    "css-loader": "0.28.5",
+    "debug": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.0",
+    "style-loader": "0.18.2",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.1",
+    "webpack": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
