--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   ],
   "dependencies": {
     "css-loader": "0.28.5",
-    "debug": "3.0.1",
-    "extract-text-webpack-plugin": "3.0.0",
+    "debug": "4.1.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "style-loader": "0.18.2",
     "stylus": "0.54.5",
-    "stylus-loader": "3.0.1",
-    "webpack": "*"
+    "stylus-loader": "3.0.2",
+    "webpack": ">=3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
